add Docker, but doesn't work

--- a/mysite.ini
+++ b/mysite.ini
@@ -1,11 +1,7 @@
 [uwsgi]
-module = wsgi:app
-
+module = app.wsgi:app
 master = true
 processes = 5
-
-socket = mysite.sock
-chmod-socket = 660
+socket = /app/mysite.sock
 vacuum = true
-
 die-on-term = true
